--- a/WpfLearn/WpfLearn/Controls/DrawVisual.xaml
+++ b/WpfLearn/WpfLearn/Controls/DrawVisual.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:WpfLearn.Models"
-        Title="DrawVisual" Initialized="DrawVisual_OnInitialized"  Height="300" Width="300">
+        Title="DrawVisual" WindowState="Maximized" Initialized="DrawVisual_OnInitialized" Height="300" Width="300">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -60,6 +60,21 @@
                         </StackPanel>
                     </Button>
 
+
+                    <Button Background="Transparent" BorderThickness="0" Name="CmdGraphMove" Click="CmdGraphMove_OnClick">
+                        <StackPanel>
+                            <Image Source="../Images/pointer.png" Width="35" Height="35"></Image>
+                            <TextBlock>GraphMove</TextBlock>
+                        </StackPanel>
+                    </Button>
+
+                    <Button Background="Transparent" BorderThickness="0" Name="CmdGraphZoom" Click="CmdGraphZoom_OnClick">
+                        <StackPanel>
+                            <Image Source="../Images/pointer.png" Width="35" Height="35"></Image>
+                            <TextBlock>GraphZoom</TextBlock>
+                        </StackPanel>
+                    </Button>
+
                     <Button Background="Transparent" BorderThickness="0" Name="CmdNone" Click="CmdNone_OnClick">
                         <StackPanel>
                             <Image Source="../Images/pointer.png" Width="35" Height="35"></Image>
@@ -67,22 +82,50 @@
                         </StackPanel>
                     </Button>
 
+                    <Button Background="Transparent" BorderThickness="0" Name="CmdReset" Click="CmdReset_OnClick">
+                        <StackPanel>
+                            <Image Source="../Images/pointer.png" Width="35" Height="35"></Image>
+                            <TextBlock>重置</TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button Background="Transparent" BorderThickness="0" Name="CmdHoom" Click="CmdHoom_OnClick">
+                        <StackPanel>
+                            <Image Source="../Images/pointer.png" Width="35" Height="35"></Image>
+                            <TextBlock>重置</TextBlock>
+                        </StackPanel>
+                    </Button>
+
+                    <Button Background="Transparent" BorderThickness="0" Name="CmdZoom" Click="CmdZoom_OnClick">
+                        <StackPanel>
+                            <Image Source="../Images/pointer.png" Width="35" Height="35"></Image>
+                            <TextBlock>重置</TextBlock>
+                        </StackPanel>
+                    </Button>
+
                 </StackPanel>
 
             </Grid>
         </Expander>
+        
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <ScrollViewer CanContentScroll="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                <Border BorderBrush="LightBlue"  BorderThickness="1">
-                    <local:CustomCanvas x:Name="LocalCanvas" MouseLeftButtonDown="LocalCanvas_OnMouseLeftButtonDown" MouseLeftButtonUp="LocalCanvas_OnMouseLeftButtonUp" MouseRightButtonUp="LocalCanvas_OnMouseRightButtonUp" MouseRightButtonDown="LocalCanvas_OnMouseRightButtonDown"  MouseMove="LocalCanvas_OnMouseMove" ClipToBounds="True"></local:CustomCanvas>
-                </Border>
+            <ScrollViewer HorizontalScrollBarVisibility="Hidden"  VerticalScrollBarVisibility="Hidden">
+                <local:CustomCanvas   x:Name="LocalCanvas" MouseLeftButtonDown="LocalCanvas_OnMouseLeftButtonDown" MouseLeftButtonUp="LocalCanvas_OnMouseLeftButtonUp" MouseRightButtonUp="LocalCanvas_OnMouseRightButtonUp" MouseRightButtonDown="LocalCanvas_OnMouseRightButtonDown"  MouseMove="LocalCanvas_OnMouseMove" ClipToBounds="True" HorizontalAlignment="Stretch" ContextMenuOpening="LocalCanvas_OnContextMenuOpening"  MouseWheel="LocalCanvas_OnMouseWheel" VerticalAlignment="Stretch">
+                    <local:CustomCanvas.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Name="MiAdd" Header="增加" />
+                            <MenuItem Name="MiLow" Header="减少" />
+                            <MenuItem Name="MiDel" Header="删除" />
+                        </ContextMenu>
+                    </local:CustomCanvas.ContextMenu>
+                </local:CustomCanvas>
             </ScrollViewer>
 
             <Slider Name="SliderScale" ValueChanged="SliderScale_OnValueChanged" MinHeight="10"  Grid.Row="1" Maximum="100"  Value="100"></Slider>
         </Grid>
     </Grid>
 </Window>
+ 
